--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,6 +1,6 @@
 
 <% @books.each do |book| %>
-<div class="book"><%= book.name %>
+<div class="book">
   <div class="row">
     <div class="col-md-1">
       <p class="rank-this-week"><%= book.rank_this_week %></p>
