--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,15 +1,15 @@
 <div class="book">
-  <p class="title"><%= book.title %> </p>
-  <p class="author">by <% =book.author %> </p>
-  <p class="publisher">(<%= book.publisher %>)</p>
-  <p class="description"><%= book.description %>  </p>
+  <p class="title"><%= @book.title %></p>
+  <p class="author">by <%= @book.author %></p>
+  <p class="publisher">(<%= @book.publisher %>)</p>
+  <p class="description"><%= @book.description %></p>
 </div>
 
 <div class="reviews">
   <% @reviews.each do |review| %>
     <div class="review">
-      <p class="author"><%= book.author %></p>
-      <p class="comment"><%= book.comment %></p>
+      <p class="author"><%= review.author %></p>
+      <p class="comment"><%= review.comment %></p>
     </div>
   <% end %>
 </div>
